# voltaic

./: .env.example  .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: deploy.yml
dbt_voltaic/: dbt_project.yml  profiles.yml
dbt_voltaic/models/: _sources.yml
dbt_voltaic/models/marts/: mart_daily_site_energy.sql  mart_session_summary.sql
docs/decisions/: 0001-medallion-architecture.md  0002-pyspark-plus-dbt-split.md  0003-bigquery-sandbox-warehouse.md  0004-dbt-core-not-cloud.md  0005-three-dataset-split.md  0006-acn-data-static-mirror.md  0007-duckdb-for-bronze-not-pyspark.md  0008-duckdb-for-silver-supersedes-spark.md  0009-pages-deploy-via-actions-artifact.md  README.md  TEMPLATE.md
evidence/: evidence.config.yaml
evidence/pages/: index.md
evidence/sources/voltaic_gold/: connection.yaml  daily_energy.sql  session_summary.sql
ingestion/: acn_data_bronze.py
scripts/: bq_setup_datasets.py  bq_smoke_test.py  load_silver_to_bq.py  setup_acn_data.sh
transform/: acn_silver.py
