[project]
name = "voltaic"
version = "0.1.0"
description = "Solar analytics lakehouse — EV charging (ACN-Data) + solar (NREL PVDAQ) on PySpark + dbt + BigQuery"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.1.0",
    "google-cloud-bigquery>=3.41.0",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
]

[tool.uv]
package = false
